--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "chart.js": "3.9.1",
-    "faker": "^6.6.6",
+    "faker": "6.6.6",
     "react": "18.1.0",
     "react-chartjs-2": "4.3.1",
     "react-dom": "18.1.0",
-    "react-icons": "4.6.0"
+    "react-icons": "4.6.0",
+    "react-router-dom": "^6.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
